<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondry_magenta_light"
    tools:context=".ui.screen.SetingsFragment">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6a1b9a"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/imgProfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/firstname_lastname"
            android:textColor="@color/secondry_magenta_light"
            android:textSize="16sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imgAddphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/layoutHeader"
        app:layout_constraintEnd_toEndOf="@id/layoutHeader" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:constraint_referenced_ids="imgSound,tvSwitch, switchSound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

    <ImageView
        android:id="@+id/imgSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sound"
        app:layout_constraintStart_toStartOf="@id/flowSwitch"
        app:layout_constraintTop_toTopOf="@id/flowSwitch" />

    <TextView
        android:id="@+id/tvSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Game sounds:"
        android:textColor="#2E3A2D"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgSound"
        app:layout_constraintTop_toTopOf="@id/flowSwitch" />

    <Switch
        android:id="@+id/switchSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/flowSwitch"
        app:layout_constraintTop_toTopOf="@id/flowSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#CDCDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/layoutHeader"
        app:layout_constraintTop_toBottomOf="@id/switchSound" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:constraint_referenced_ids="imgLogIn,tvLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchSound" />

    <ImageView
        android:id="@+id/imgLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_log_in"
        app:layout_constraintStart_toStartOf="@id/flowLogIn"
        app:layout_constraintTop_toTopOf="@id/flowLogIn" />

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/log_in"
        android:textColor="#2E3A2D"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgLogIn"
        app:layout_constraintTop_toTopOf="@id/flowLogIn" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:visibility="visible"
        app:constraint_referenced_ids="imgLogOut,tvlogOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchSound" />

    <ImageView
        android:id="@+id/imgLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_log_out"
        app:layout_constraintStart_toStartOf="@id/flowLogOut"
        app:layout_constraintTop_toTopOf="@id/flowLogOut" />

    <TextView
        android:id="@+id/tvlogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/log_out"
        android:textColor="#2E3A2D"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgLogOut"
        app:layout_constraintTop_toTopOf="@id/flowLogOut" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#CDCDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/flowLogOut"
        app:layout_constraintTop_toBottomOf="@id/flowLogOut" />

    <LinearLayout
        android:id="@+id/layoutAcaunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowLogOut">


        <TextView
            android:id="@+id/tvSetingsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/emailtv"
            android:textColor="#2E3A2D"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/email_address"
            android:textColor="#939393"
            android:textSize="12sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#CDCDCD" />

        <TextView
            android:id="@+id/tvSetingsPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/passwordbtn"
            android:textColor="#2E3A2D"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/click_to_change_the_password"
            android:textColor="#939393"
            android:textSize="12sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#CDCDCD" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="save"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>