<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondry_magenta_light"
    android:padding="35dp"
    tools:context=".ui.screen.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#38006b"
                android:textSize="45sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="Theme.MaterialDesign" parent="Theme.MaterialComponents.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="FirsName"
                app:endIconMode="none">

                <EditText
                    android:id="@+id/edFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="textImeMultiLine"
                    android:paddingTop="24dp"
                    android:textColor="@color/black"
                    android:textColorHint="#AFADAD" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="Theme.MaterialDesign" parent="Theme.MaterialComponents.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="LastName"
                app:endIconMode="none">

                <EditText
                    android:id="@+id/edLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="textImeMultiLine"
                    android:paddingTop="24dp"
                    android:textColor="@color/black"
                    android:textColorHint="#AFADAD"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="Theme.MaterialDesign" parent="Theme.MaterialComponents.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email"
                app:endIconMode="none">

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="textEmailAddress"
                    android:paddingTop="24dp"
                    android:textColor="@color/black"
                    android:textColorHint="#AFADAD"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="Theme.MaterialDesign" parent="Theme.MaterialComponents.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="textPassword"
                    android:paddingTop="24dp"
                    android:textColor="@color/black"
                    android:textColorHint="#AFADAD" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:backgroundTint="@color/magenta_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="24dp" />

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/log_in"
                android:textColor="@color/magenta_dark"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>